# MemBrain

./: .gitattributes  .gitignore  INTEGRATION.md  LICENSE  README.md  install.bat  package.json  pyproject.toml
docs/: api_contract.md  deliverable.md  easm_algorithm.md  integration_architecture.md
eval/: e2e_cases.jsonl  extraction_cases.jsonl  retrieval_cases.jsonl  strength_cases.jsonl
examples/: http_sidecar_payloads.md
pi-extension/: csm-memory.ts  install.ps1  mb-memory.ts
src/brainmemory/: adapters.py  api_contract.py  cli.py  embedding.py  engine.py  evaluation.py  evolution.py  models.py  retrieval.py  server.py  store.py  strength.py
src/csm_agent/: __init__.py  adapters.py  api_contract.py  cli.py  embedding.py  engine.py  evaluation.py  evolution.py  extractor.py  llm_config.py  models.py  retrieval.py  security.py  server.py  store.py  strength.py
src/membrain/: embedding.py  server.py
tests/: run_tests.py  test_adapters.py  test_easm.py  test_engine.py  test_evaluation.py  test_evolution.py  test_extractor.py  test_server.py  test_strength.py
tools/: generate_paper.py  rename_all.py
tools/sim_charts/: decay_60d.csv  decay_60d_summary.md
